--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,6 +31,10 @@ jobs:
         # Action to check out the code
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        # Set up Docker Buildx for multi-platform builds
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to the Container registry
         # Action to log into the container registry
         uses: docker/login-action@v3
@@ -61,5 +65,6 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }} # Only push on 'push' events, not 'pull_request'
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64 # Build for both AMD64 and ARM64
           # Use this if your Dockerfile is not in the root
           # file: ./path/to/my/Dockerfile
